--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,1 +1,23 @@
+.header{
+    margin-bottom: 3px;
+}
+.checkbox{
+    margin-left: 15px;
+    margin-right: 15px;
+}
+ion-slides {
+    height:100%;
+    border-bottom: groove
+}
 
+.slide1{
+    // background-color: #ddd;
+    height:498px;
+}
+
+.danger{
+    color: red;
+}
+.item1{
+    width:95%;
+}
