--- a/src/global.scss
+++ b/src/global.scss
@@ -62,6 +62,9 @@ ion-item {
   .bg-main {
       background-image: linear-gradient(-135deg, var(--ion-color-medium), var(--ion-color-light))
   }
+  .bg-bisque{
+    background-color: bisque;
+  }
   
   // Helpers //
   .w100 {
